# lfi

./: .gitignore  CMakeLists.txt  README.md
dev/: c3_build.sh  docker_build.sh  unito_build.sh  unito_build_tcp.sh
examples/: CMakeLists.txt  lfi_client.c  lfi_server.c  socket_client.c  socket_server.c
examples/bw/: CMakeLists.txt  bw_common.hpp  bw_lfi_any_comm_client.cpp  bw_lfi_any_comm_server.cpp  bw_lfi_client.cpp  bw_lfi_client_async.cpp  bw_lfi_client_invert.cpp  bw_lfi_server.cpp  bw_lfi_server_async.cpp  bw_lfi_server_invert.cpp  bw_lfi_server_tpool.cpp  bw_mercury_client.cpp  bw_mercury_server.cpp  bw_mpi_client.cpp  bw_mpi_client_invert.cpp  bw_mpi_server.cpp  bw_mpi_server_invert.cpp  bw_mpi_server_tpool.cpp  bw_socket_client.cpp  bw_socket_server.cpp  simple_mpi_coll.cpp  thread_pool.hpp
examples/coroutines/: CMakeLists.txt  FindLibUring.cmake  co_cat_lfi_client.cpp  co_cat_lfi_server.cpp  co_cat_uring_lfi_server.cpp  co_lfi_client.cpp  co_lfi_server.cpp  coroutines.hpp  liburing_op_support.cpp  test_cat.cpp
examples/echo/: CMakeLists.txt  bw_common.hpp  echo_common.hpp  echo_lfi_client_interval.cpp  echo_lfi_client_interval_send.cpp  echo_lfi_client_recv.cpp  echo_lfi_client_send.cpp  echo_lfi_client_send_async.cpp  echo_lfi_server.cpp  echo_lfi_server_async.cpp  echo_lfi_server_async_auto.cpp  echo_lfi_server_async_tpool.cpp  echo_lfi_server_recv.cpp  echo_lfi_server_seq.cpp  echo_mpi_client_interval.cpp  echo_mpi_client_recv.cpp  echo_mpi_client_send.cpp  echo_mpi_client_send_async.cpp  echo_mpi_server.cpp  echo_mpi_server_async.cpp  echo_mpi_server_seq.cpp  thread_pool.hpp
examples/multi/: CMakeLists.txt  multi_lfi_client.c  multi_lfi_server.c  multi_socket_client.c  multi_socket_server.c
examples/simple/: CMakeLists.txt  simple_lfi_allreduce.c  simple_lfi_client_any_comm.cpp  simple_lfi_client_async.c  simple_lfi_client_pp.c  simple_lfi_client_rma.c  simple_lfi_coll.c  simple_lfi_server.c  simple_lfi_server_any_comm.cpp  simple_lfi_server_pp.c  simple_lfi_server_rma.c  simple_socket_client.c  simple_socket_server.c
include/: lfi.h  lfi_async.h  lfi_coll.h  lfi_error.h
include/impl/: debug.hpp  env.hpp  fabric.hpp  ft_manager.hpp  helpers.hpp  lfi.hpp  lfi_comm.hpp  lfi_endpoint.hpp  lfi_request.hpp  lfi_request_context.hpp  ns.hpp  pending_ops.hpp  profiler.hpp  proxy.hpp  socket.hpp  vector_queue.hpp
ld_preload/: CMakeLists.txt  debug.hpp  ld_preload.cpp  ld_preload.hpp  proxy.hpp
src/: CMakeLists.txt  lfi.cpp  lfi_async.cpp  lfi_coll.cpp
src/impl/: address.cpp  cancel.cpp  comm.cpp  connection.cpp  fabric.cpp  fabric_ft.cpp  fabric_init.cpp  fabric_send_recv.cpp  fabric_thread.cpp  ft.cpp  ft_manager.cpp  init.cpp  lfi_endpoint.cpp  lfi_request.cpp  mr.cpp  recv.cpp  rma.cpp  send.cpp  socket.cpp  stats.cpp  wait.cpp
